arkts_static_test/02_LexicalElements/ets_cases/2.6_Identifiers/compile-fail/LEX_02_06_025_FAIL_OPERATOR_START.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id LEX_02_06_025_FAIL_OPERATOR_START
 * @expect compile-fail
 * @section 2.6
 * @design 标识符不能以运算符字符开头
 * @note 反向用例：-foo 不是合法标识符
 */
function testOperatorStart(): void {
  let -foo: int = 1
}
